# mmc_gene_mapper

./: LICENSE.txt  README.md  pyproject.toml
data/: .gitignore
data/db_creation_data/: .gitignore
data/ensembl_download/: .gitignore
expensive_tests/: test_db_creation.py
expensive_tests/scratch/: .gitignore
garage/ensembl_download/: create_db.py  create_jsonld.py
notebooks/: gene_mapper_demo.ipynb
scratch/: .gitignore
src/gene_mapper/create_db/: utils.py
src/gene_mapper/data/: .gitignore
src/gene_mapper/query_db/: query.py
src/mmc_gene_mapper/: __init__.py
tests/: conftest.py
tests/arbitrary_conversion/: conftest.py  test_arbitrary_conversion.py
tests/create_db/: test_db_utils.py  test_gene_ingestion.py  test_metadata_utils.py  test_ortholog_ingestion.py  test_ortholog_utils.py  test_species_utils.py
tests/download/: test_download_manager_utils.py
tests/mapper/: test_bibliography_creation.py  test_bibliography_table.py  test_gene_characterization.py  test_mapper_constructor.py  test_mapper_utils.py  test_species_detection.py
tests/metadata/: test_metadata_classes.py
tests/query/: test_basic_query_utils.py
tests/species_detection/: test_species_mappings.py
tests/utils/: test_file_utils.py  test_str_utils.py
tests/with_data/: conftest.py  test_arbitrary_conversion.py  test_bkbit_ingestion_data.py  test_genome_versions.py  test_legacy_arbitrary_conversion.py  test_metadata_of_mapping.py  test_ncbi_and_bkbit_ingestion.py  test_ncbi_ingestion_and_query.py  test_species_identification.py  test_species_ingestion_data.py
(+31 files in other folders)
