[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="mmc_gene_mapper"
version="0.0.1"
dependencies = [
    "h5py",
    "jupyter",
    "numpy",
    "pandas",
    "pytest",
    "pytest-xdist",
    "scipy<1.15.0"
]
requires-python = ">=3.10"
authors = [
    {name = "Scott Daniel", email = "scott.daniel@alleninstitue.org"},
]
