[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="mmc_gene_mapper"
version="0.1.0"
dependencies = [
    "abc_atlas_access @ git+https://github.com/AllenInstitute/abc_atlas_access",
    "bkbit @ git+https://github.com/danielsf/bkbit@mmc.gene.mapper.v0.1.2",
    "schemasheets @ git+https://github.com/linkml/schemasheets",
    "h5py",
    "jupyter",
    "numpy",
    "pandas",
    "pytest",
    "pytest-xdist",
    "scipy<1.15.0"
]
requires-python = ">=3.10"
authors = [
    {name = "Scott Daniel", email = "scott.daniel@alleninstitue.org"},
]
